[package]
name = "bcc-legacy-address"
version = "0.1.1"
authors = ["Vincent Hanquez <vincent.hanquez@blockchain-company.io>", "Nicolas Di Prima <nicolas.diprima@blockchain-company.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/The-Blockchain-Company/rust-bcc"
homepage = "https://github.com/The-Blockchain-Company/rust-bcc/bcc-legacy-address#README.md"
description = """
Support for the useful part of legacy bcc address.
"""
keywords = [ "Bcc", "Wallet", "Crypto" ]
edition = "2021"

[build-dependencies]

[dependencies]
cryptoxide = "0.4"
cbor_event = "^2.1.3"
ed25519-bip32 = "0.4.1"
chain-ser = {path = "../chain-ser"}

criterion = { version = "0.3.0", optional = true }

[features]
default = []
with-bench = ["criterion"]

[[bench]]
harness = false
name = "cbor"
required-features = ["with-bench"]
